--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
@@ -7,19 +20,9 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "mongoose": "^8.17.0",
-    "nodemailer": "^7.0.5",
+    "nodemailer": "^7.0.5"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
-  },
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs"
+  }
 }
