--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Fitness Tracker Backend API",
   "main": "index.js",
   "type": "commonjs",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["fitness", "tracker", "api", "backend"],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
-    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
